tried to fix height on mobile

--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,7 @@
 
 body { 
 	font: 13px Helvetica, Arial;
+	height: 100%;
 }
 
 #login{
